dataset1235/2025-2/610742602/users/1126757059/executions/2563853024_1559799913.log
== SUBMISSION (2025-09-02 20:17:36)
-- CODE: 
numero =int(input("numero"))
quadrado = numero ** 2
print(quadrado)


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
numero4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
numero0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
numero1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
numero100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
numero225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
numero14400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:13:44)
-- CODE: 
numero =int(input)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:12:06)
-- CODE: 
numero =imt(input)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:13:30)
-- CODE: 
numero =imt(input)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:11:58)
-- CODE: 
numero =imt(input))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero =imt(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero =imt(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero =imt(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero =imt(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero =imt(input))
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero =imt(input))
                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:12:07)
-- CODE: 
numero =imt(input)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =imt(input)
            ^^^
NameError: name 'imt' is not defined. Did you mean: 'int'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:17:35)
-- CODE: 
numero =int(input("numero"))
quadrado = numero ** 2
print(quadrado)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
numero4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
numero0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
numero1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
numero100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
numero225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
numero14400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
